# paige

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  INSTALL.md  LICENSE  README.md  SECURITY.md  do.sh  env.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
doc/: architecture.md  config.md  interactive-ui.md  message-seq-arch.md  multi-host.md  outbound-flow.md  topic-mode.md  upgrade.md
scripts/: build_artifact.sh  create_topic_group.py  probe_prompt_ghost.py  prod.sh  seed_general_topic.py
src/paige/: __init__.py
src/paige/adapters/: jsonl_watcher.py  openai_transcriber.py  storage.py  tmux.py
src/paige/adapters/feishu/: __init__.py  cards.py  channel.py  client.py  inbound.py  lark_client.py  post.py
src/paige/application/: __init__.py  _sessions_actions.py  _sessions_cards.py  _sessions_chooser.py  _sessions_context.py  _sessions_lifecycle.py  _sessions_manage.py  access.py  agent_batch.py  ask_user.py  collapse_pref.py  commands.py  directories.py  dispatcher.py  echo_dedup.py  end_turn_panel.py  history.py  hosts.py  interactive_ui.py  live_pane.py  message_seq.py  multiplexer_router.py  outbox.py  proc_scan.py  quick_reply_prefs.py  readiness.py  run_discovery.py  run_registry.py  screenshot.py  server.py  sessions.py  status_carrier.py  status_service.py  task_tracker.py  tool_renderers.py  usage.py  verbosity.py  voice.py  watcher_router.py
src/paige/domain/: card.py  conversation.py  host.py  inbound.py  outbound.py  pane.py  person.py  run.py  transcript.py
src/paige/entrypoint/: __init__.py  __main__.py  app.py  config.py  main.py
src/paige/infrastructure/: ansi_markdown.py  format.py  jsonl_parser.py  markdown_safe.py  psutil_primitives.py  sessions_index.py  terminal_image.py  terminal_parser.py  token_bucket.py  transcript_path.py  usage_parser.py
src/paige/ports/: channel.py  multiplexer.py  proc_primitives.py  storage.py  transcriber.py  watcher.py
src/paige/testing/: __init__.py  fake_feishu.py  fakes.py
tests/_fixtures/: mock_claude
tests/e2e/: test_full_loop.py
tests/integration/adapters/: test_jsonl_watcher.py  test_storage.py  test_tmux.py
tests/unit/: test_smoke.py
tests/unit/adapters/: test_openai_transcriber.py
tests/unit/adapters/feishu/: test_cards.py  test_channel.py  test_inbound.py  test_post.py
tests/unit/application/: test_access.py  test_agent_batch.py  test_ask_user.py  test_commands.py  test_directories.py  test_dispatcher.py  test_echo_dedup.py  test_end_turn_panel.py  test_history.py  test_hosts.py  test_interactive_ui.py  test_live_pane.py  test_message_seq.py  test_multiplexer_router.py  test_outbox.py  test_proc_scan.py  test_quick_reply_prefs.py  test_readiness.py  test_run_discovery.py  test_run_registry.py  test_screenshot.py  test_server.py  test_sessions.py  test_status_carrier.py  test_status_service.py  test_task_tracker.py  test_tool_renderers.py  test_usage.py  test_verbosity.py  test_voice.py  test_watcher_router.py
tests/unit/domain/: test_card.py  test_conversation.py  test_host.py  test_inbound.py  test_outbound.py  test_pane.py  test_person.py  test_run.py  test_transcript.py
tests/unit/entrypoint/: test_app.py  test_config.py
tests/unit/infrastructure/: test_ansi_markdown.py  test_format.py  test_jsonl_parser.py  test_markdown_safe.py  test_psutil_primitives.py  test_sessions_index.py  test_terminal_image.py  test_terminal_parser.py  test_token_bucket.py  test_transcript_path.py  test_usage_parser.py
tests/unit/ports/: test_channel.py  test_multiplexer.py  test_storage.py  test_watcher.py
tests/unit/testing/: test_fake_channel.py  test_fake_multiplexer.py  test_fake_watcher.py  test_fakes.py
